[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/ResolutionHandler.gd" type="Script" id=1]
[ext_resource path="res://fonts/BRITANIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/GUIScalers/ResSel/GS_ResSelHalfButton.gd" type="Script" id=3]
[ext_resource path="res://scripts/GUIScalers/ResSel/GS_ResSel3of4Button.gd" type="Script" id=4]
[ext_resource path="res://scripts/GUIScalers/ResSel/GS_ResSelGoButton.gd" type="Script" id=5]
[ext_resource path="res://scripts/GUIScalers/ResSel/GS_ResSelFullButton.gd" type="Script" id=6]
[ext_resource path="res://scripts/GUIScalers/ResSel/GS_ResSelFullwinButton.gd" type="Script" id=7]
[ext_resource path="res://scripts/GUIScalers/ResSel/GS_ResSelWarning.gd" type="Script" id=8]
[ext_resource path="res://scripts/GUIScalers/ResSel/GS_ResSelTitle.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
outline_size = 2
outline_color = Color( 0.780392, 0, 0, 1 )
extra_spacing_top = 1
font_data = ExtResource( 2 )

[node name="Spatial" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.247059, 0.137255, 0.137255, 1 )

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.5
color = Color( 0.164706, 0.137255, 0.247059, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="half" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -272.0
margin_top = -40.0
margin_right = -172.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Half-screen"
script = ExtResource( 3 )

[node name="3of4" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -40.0
margin_right = -24.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "3/4-screen"
script = ExtResource( 4 )

[node name="full" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 24.0
margin_top = -40.0
margin_right = 124.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Fullscreen"
script = ExtResource( 6 )

[node name="fullwin" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = -40.0
margin_right = 272.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Full-window"
script = ExtResource( 7 )

[node name="go" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 84.0
margin_right = 100.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
text = "Proceed"
script = ExtResource( 5 )

[node name="ResolutionHandler" type="Node" parent="ColorRect"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="ColorRect"]
visible = false
anchor_right = 1.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 2 )
text = "Welcome to the resolution selector!
An update will come soon with a propper in-game settings menu.
This was made for just time saving.
Ya know, to focus on the actual game?
Anyways, this is the only way to enable fullscreen or use these presets."
align = 1

[node name="Label2" type="Label" parent="ColorRect"]
anchor_right = 1.0
margin_bottom = 102.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "IMPORTANT:
In-game settings soon. Also, freeze-ups are inevitable right now. Preloads coming soon too."
align = 1
autowrap = true
script = ExtResource( 8 )

[node name="Label3" type="Label" parent="ColorRect"]
anchor_right = 1.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 2 )
text = "Resolution Selector"
align = 1
autowrap = true
script = ExtResource( 9 )

[connection signal="pressed" from="ColorRect/half" to="ColorRect/ResolutionHandler" method="_on_half_pressed"]
[connection signal="pressed" from="ColorRect/3of4" to="ColorRect/ResolutionHandler" method="_on_3of4_pressed"]
[connection signal="pressed" from="ColorRect/full" to="ColorRect/ResolutionHandler" method="_on_full_pressed"]
[connection signal="pressed" from="ColorRect/fullwin" to="ColorRect/ResolutionHandler" method="_on_fullwin_pressed"]
[connection signal="pressed" from="ColorRect/go" to="ColorRect/ResolutionHandler" method="_on_go_pressed"]
